# TOTP_Generator

./: README.md  cli.py  core.py  pyproject.toml
totp/: __init__.py  cli.py
